# spindle

./: .gitignore  README.md  pyproject.toml
spindle/: __init__.py  core.py  data.py  models.py  optimize.py  utils.py
tests/: test_spindle.py
