[tool.poetry]
name = "spindle"
version = "0.1.0"
description = ""
authors = ["Pranav Teegavarapu <pranavnt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.42.0"
anthropic = "^0.34.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
